# libschrift_opencv

./: CMakeLists.txt  main.cpp  schrift.c
